--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <br>
     
     <br>
-    <button id="submit" type="submit">Hitung</button>
+    <button id="submit" class="w3-button w3-green" type="submit">Hitung</button>
     <br>
     <br>
     jumlah Pintu rumah: <span id="answer"></span>
